// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModifiersList /> should pass custom props to correct blocks 1`] = `
<div
  className="wrapper-test-class"
  id={4}
>
  <div
    className="sizes-table-wrapper"
  >
    <Link
      className="sizes-table-link"
      external={true}
      href="test.ru/123"
    >
      Таблица размеров
      <Icon
        className="sizes-table-icon"
        icon={[Function]}
        inline={true}
        role="presentation"
        size={24}
      />
    </Link>
  </div>
  <div
    className="items-container-test-class"
  >
    <ModifierItem
      key="0"
      name="testModifier - 1"
      onClick={[Function]}
      price={123}
      type="text"
    />
    <ModifierItem
      key="1"
      name="testModifier - 2"
      onClick={[Function]}
      price={233}
      type="text"
    />
  </div>
</div>
`;

exports[`<ModifiersList /> should render correct with sizesTableUrl 1`] = `
<ModifiersList
  sizesTableUrl="test.ru/123"
>
  <div>
    <div
      className="sizes-table-wrapper"
    >
      <Link
        className="sizes-table-link"
        external={true}
        href="test.ru/123"
      >
        <a
          className="sizes-table-link link link-blue link-can-be-hovered"
          href="test.ru/123"
          target="_blank"
        >
          Таблица размеров
          <Icon
            className="sizes-table-icon"
            icon={[Function]}
            inline={true}
            role="presentation"
            size={24}
          >
            <statement
              className="icon sizes-table-icon"
              height={24}
              role="presentation"
              viewBox="0 0 36 36"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="icon sizes-table-icon"
                height={24}
                role="presentation"
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 24a1.5 1.5 0 0 0 1.5 1.5h6a1.5 1.5 0 0 0 0-3h-6A1.5 1.5 0 0 0 12 24zm1.5-4.5a1.5 1.5 0 0 1 0-3h9a1.5 1.5 0 0 1 0 3zM12 12a1.5 1.5 0 0 0 1.5 1.5h9a1.5 1.5 0 0 0 0-3h-9A1.5 1.5 0 0 0 12 12zm0 0"
                />
                <path
                  d="M9 3h18c2.484 0 4.5 2.016 4.5 4.5v21c0 2.484-2.016 4.5-4.5 4.5H9a4.501 4.501 0 0 1-4.5-4.5v-21C4.5 5.016 6.516 3 9 3zm0 3a1.5 1.5 0 0 0-1.5 1.5v21A1.5 1.5 0 0 0 9 30h18a1.5 1.5 0 0 0 1.5-1.5v-21A1.5 1.5 0 0 0 27 6zm0 0"
                />
              </svg>
            </statement>
          </Icon>
        </a>
      </Link>
    </div>
  </div>
</ModifiersList>
`;

exports[`<ModifiersList /> should renders correctly with correct props 1`] = `
<div>
  <div>
    <ModifierItem
      currencyGrapheme="$"
      key="0"
      name="testModifier - 1"
      onClick={[Function]}
      price={123}
      type="text"
    />
    <ModifierItem
      currencyGrapheme="$"
      key="1"
      name="testModifier - 2"
      onClick={[Function]}
      price={233}
      type="text"
    />
  </div>
</div>
`;

exports[`<ModifiersList /> should renders correctly without props 1`] = `<div />`;
